--- a/plugin.yml
+++ b/plugin.yml
@@ -4,4 +4,8 @@ version: 1.1
 api-version: 1.16
 author: Mercerenies
 description: Have fun :)
-commands: {}
+commands:
+  turtle:
+    description: Enable or disable features of A Turtle's Troll
+    usage: /turtle <on|off|list> [feature]
+    permission: com.mercerenies.turtletroll.turtle
