--- a/plugin.yml
+++ b/plugin.yml
@@ -11,6 +11,8 @@ commands:
 permissions:
   com.mercerenies.turtletroll.command:
     default: true
+  com.mercerenies.turtletroll.command.bedtime:
+    default: true
   com.mercerenies.turtletroll.feature.list:
     default: true
   com.mercerenies.turtletroll.feature.toggle:
