--- a/plugin.yml
+++ b/plugin.yml
@@ -15,5 +15,7 @@ permissions:
     default: true
   com.mercerenies.turtletroll.feature.list:
     default: true
+  com.mercerenies.turtletroll.feature.describe:
+    default: true
   com.mercerenies.turtletroll.feature.toggle:
     default: op
