--- a/plugin.yml
+++ b/plugin.yml
@@ -13,6 +13,8 @@ permissions:
     default: true
   com.mercerenies.turtletroll.command.bedtime:
     default: true
+  com.mercerenies.turtletroll.command.encumbrance:
+    default: true
   com.mercerenies.turtletroll.feature.list:
     default: true
   com.mercerenies.turtletroll.feature.describe:
