--- a/plugin.yml
+++ b/plugin.yml
@@ -4,6 +4,8 @@ version: 1.20
 api-version: 1.19
 author: Mercerenies
 description: Have fun :)
+depend:
+  - ProtocolLib
 commands:
   turtle:
     description: Enable or disable features of A Turtle's Troll
