--- a/plugin.yml
+++ b/plugin.yml
@@ -17,11 +17,13 @@ permissions:
     default: true
   com.mercerenies.turtletroll.command.encumbrance:
     default: true
+  com.mercerenies.turtletroll.command.answer:
+    default: true
   com.mercerenies.turtletroll.feature.list:
     default: true
   com.mercerenies.turtletroll.feature.describe:
     default: true
   com.mercerenies.turtletroll.feature.toggle:
     default: op
-  com.mercerenies.turtletroll.feature.debug:
+  com.mercerenies.turtletroll.debug:
     default: op
