--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 main: com.mercerenies.turtletroll.Main
 name: A_Turtles_Troll
-version: 1.20
-api-version: 1.19
+version: "1.20"
+api-version: "1.19"
 author: Mercerenies
 description: Have fun :)
 depend:
