--- a/config-easy.yml
+++ b/config-easy.yml
@@ -3,30 +3,30 @@ global:
   difficulty: easy
 ak47:
   enabled: true
-  quick_charge_level: 5
+  quick_charge_level: 0
 allays:
   enabled: true
 amethyst:
   enabled: true
-  probability: 0.1
+  probability: 0.15
 angrygolems:
   enabled: true
 anvil:
   enabled: true
-  min_drop_height: 7
-  max_drop_height: 15
-  period: 10 # In seconds
+  min_drop_height: 9
+  max_drop_height: 20
+  period: 15
 axolotl:
   enabled: true
-  radius: 32.0
+  radius: 24.0
 bamboo:
   enabled: true
 bedrock:
   enabled: true
 bees:
   enabled: true
-  probability: 0.2
-  radius: 5
+  probability: 0.1
+  radius: 3
 blazepower:
   enabled: true
 boatbomb:
@@ -37,7 +37,7 @@ butterfingers:
   enabled: true
 buttondrop:
   enabled: true
-  max_uses: 4
+  max_uses: 10
 cactuskick:
   enabled: true
 cakes:
@@ -55,17 +55,17 @@ chestshuffle:
   enabled: true
 chickens:
   enabled: true
-  zombie_rider_chance: 0.1
+  zombie_rider_chance: 0.02
 classiclava:
   enabled: true
-  normal_spread: 4
-  nether_spread: 8
+  normal_spread: 2
+  nether_spread: 4
   end_spread: 0
 cookies:
   enabled: true
 creeperdeath:
   enabled: true
-  allay_count: 3
+  allay_count: 1
 deathscoreboard:
   enabled: true
 demand:
@@ -74,17 +74,17 @@ dirtrecipe:
   enabled: true
 dirtstacks:
   enabled: true
-  regular_probability: 0.3
-  frequent_probability: 1.0
+  regular_probability: 0.2
+  frequent_probability: 0.5
 doctordances:
   enabled: true
 doordrop:
   enabled: true
-  max_uses: 16
+  max_uses: 32
 dragonbomb:
   enabled: true
-  min_timer_triggers_per_attack: 3
-  max_timer_triggers_per_attack: 12
+  min_timer_triggers_per_attack: 6
+  max_timer_triggers_per_attack: 15
 dripstone:
   enabled: true
 drowned:
@@ -97,7 +97,7 @@ eggdrop:
   enabled: true
   probability: 1.0
   min_eggs: 1
-  max_eggs: 4
+  max_eggs: 1
 eggs:
   enabled: true
 eggshells:
@@ -105,12 +105,12 @@ eggshells:
 encumbrance:
   enabled: true
   penalties:
-    occupied_inventory_slot: 0.0003
-    leather_armor: 0.001
-    non_leather_armor: 0.0025
-    slowness: 0.10
-    confusion: 0.05
-    gods_rage: 0.01
+    occupied_inventory_slot: 0.0002
+    leather_armor: 0.0005
+    non_leather_armor: 0.0005
+    slowness: 0.01
+    confusion: 0.01
+    gods_rage: 0.001
 endcrystal:
   enabled: true
 enddirt:
@@ -128,7 +128,7 @@ escalation:
   effect_count: 4
 expirationdate:
   enabled: true
-  probability: 0.1
+  probability: 0.05
   slime_size: 2
 explosivearrow:
   enabled: true
@@ -149,7 +149,7 @@ ghastlava:
   enabled: true
 ghasts:
   enabled: true
-  probability: 0.2
+  probability: 0.1
 glass:
   enabled: true
 goddesshoe:
@@ -161,29 +161,29 @@ gravestone:
   enabled: true
 grievingwidow:
   enabled: true
-  minutes_to_disable: 10
+  minutes_to_disable: 20
 johnny:
   enabled: true
-  probability: 0.1
+  probability: 0.01
 killerrabbit:
   enabled: true
 lavalaunch:
   enabled: true
-  velocity_y: 1.3
+  velocity_y: 1.2
 learning:
   enabled: true
 levitation:
   enabled: true
-  levitation_seconds: 5
+  levitation_seconds: 2
 llamahunter:
   enabled: true
-  speed_multiplier: 5.5
-  min_llamas: 2
+  speed_multiplier: 4.0
+  min_llamas: 1
 melompkin:
   enabled: true
 mimics:
   enabled: true
-  probability: 0.05
+  probability: 0.01
 minecrafttrivia:
   enabled: true
   minutes_between_questions: 10
@@ -192,7 +192,7 @@ moss:
   enabled: true
 mossrevenge:
   enabled: true
-  probability: 0.2
+  probability: 0.05
   slime_size: 2
 namedzombie:
   enabled: true
@@ -209,19 +209,19 @@ oldage:
   age_limit: 100 # NOTE: Read this in LearningFromFailureListener as well
 overgrowth:
   enabled: true
-  delay_seconds: 600
+  delay_seconds: 1200
   obsidian: false
 parrotcookie:
   enabled: true
-  parrot_duplicate_count: 5
+  parrot_duplicate_count: 2
 parrotdeath:
   enabled: true
 parrots:
   enabled: true
 phantoms:
   enabled: true
-  spawn_probability: 0.33
-  cooldown_after_kill_seconds: 600
+  spawn_probability: 0.1
+  cooldown_after_kill_seconds: 1200
   min_spawn_height: 6
   max_spawn_height: 20
 piglins:
@@ -230,18 +230,18 @@ pigs:
   enabled: true
 pillagerdeath:
   enabled: true
-  slime_count: 3
+  slime_count: 1
   slime_size: 2
 pokeball:
   enabled: true
 platefire:
   enabled: true
-  probability: 0.05
+  probability: 0.01
 pufferfish:
   enabled: true
-  pufferfish_count: 5
-  explosion_power: 5.0
-  explosion_power_in_water: 10.0
+  pufferfish_count: 3
+  explosion_power: 4.0
+  explosion_power_in_water: 8.0
 pumpkins:
   enabled: true
 rainwater:
@@ -251,11 +251,11 @@ ravagers:
   probability: 0.5
 redstoneworld:
   enabled: true
-  drop_probability: 0.5
+  drop_probability: 0.2
   min_items: 1
-  max_items: 64
+  max_items: 16
   min_damage: 0.0
-  max_damage: 20.0
+  max_damage: 10.0
 sandattack:
   enabled: true
   red_sand_probability: 0.1
@@ -264,25 +264,25 @@ sheepcolor:
   enabled: true
 shieldsurf:
   enabled: true
-  damage_multiplier: 1.0
+  damage_multiplier: 0.1
 shufflelogs:
   enabled: true
 silverfish:
   enabled: true
-  probability: 0.2
-  bomb_probability: 0.2
+  probability: 0.1
+  bomb_probability: 0.1
   bomb_radius: 3
-  release_chance: 0.2
-  infestation_chance: 0.2 # NOTE: Stack on release_chance in the code
+  release_chance: 0.1
+  infestation_chance: 0.1
 silverfishburn:
   enabled: true
 slimesplit:
   enabled: true
-  max_slime_size: 10 # NOTE: Put a cap on this in the code
+  max_slime_size: 5
 slowslab:
   enabled: true
-  slow_time_seconds: 10
-  slowness_level: 4
+  slow_time_seconds: 5
+  slowness_level: 2
 snowspeed:
   enabled: true
 snowball:
@@ -296,16 +296,16 @@ stonetools:
   enabled: true
 stronghold:
   enabled: true
-  bomb_probability: 0.2
-  bomb_radius: 4
-  release_chance: 0.5
-  infestation_chance: 0.5
+  bomb_probability: 0.1
+  bomb_radius: 3
+  release_chance: 0.2
+  infestation_chance: 0.2
 sweetdreams:
   enabled: true
-  effects_count: 3
+  effects_count: 1
 tallgrass:
   enabled: true
-  boots_damage_probability: 1.0
+  boots_damage_probability: 0.5
 temperature:
   enabled: true
 torches:
@@ -323,17 +323,17 @@ wardensummon:
 weepingangel:
   enabled: true
   spawn_probability: 0.05
-  max_angels_per_chunk: 2
-  movement_speed: 1.0 # Meters per tick
+  max_angels_per_chunk: 1
+  movement_speed: 0.5
 witchattack:
   enabled: true
   probability: 0.5
 witches:
   enabled: true
-  probability: 0.05
+  probability: 0.01
 witherarrow:
   enabled: true
-  wither_seconds: 10
+  wither_seconds: 4
 witherbow:
   enabled: true
   probability: 0.5
