--- a/config-insane.yml
+++ b/config-insane.yml
@@ -3,30 +3,30 @@ global:
   difficulty: insane
 ak47:
   enabled: true
-  quick_charge_level: 5
+  quick_charge_level: 10
 allays:
   enabled: true
 amethyst:
   enabled: true
-  probability: 0.1
+  probability: 0.08
 angrygolems:
   enabled: true
 anvil:
   enabled: true
-  min_drop_height: 7
+  min_drop_height: 4
   max_drop_height: 15
-  period: 10 # In seconds
+  period: 2
 axolotl:
   enabled: true
-  radius: 32.0
+  radius: 9999.0
 bamboo:
   enabled: true
 bedrock:
   enabled: true
 bees:
   enabled: true
-  probability: 0.2
-  radius: 5
+  probability: 1.0
+  radius: 10
 blazepower:
   enabled: true
 boatbomb:
@@ -37,7 +37,7 @@ butterfingers:
   enabled: true
 buttondrop:
   enabled: true
-  max_uses: 4
+  max_uses: 1
 cactuskick:
   enabled: true
 cakes:
@@ -55,17 +55,17 @@ chestshuffle:
   enabled: true
 chickens:
   enabled: true
-  zombie_rider_chance: 0.1
+  zombie_rider_chance: 1.0
 classiclava:
   enabled: true
-  normal_spread: 4
-  nether_spread: 8
+  normal_spread: 20
+  nether_spread: 20
   end_spread: 0
 cookies:
   enabled: true
 creeperdeath:
   enabled: true
-  allay_count: 3
+  allay_count: 6
 deathscoreboard:
   enabled: true
 demand:
@@ -74,17 +74,17 @@ dirtrecipe:
   enabled: true
 dirtstacks:
   enabled: true
-  regular_probability: 0.3
-  frequent_probability: 1.0
+  regular_probability: 1.0
+  frequent_probability: 2.0
 doctordances:
   enabled: true
 doordrop:
   enabled: true
-  max_uses: 16
+  max_uses: 1
 dragonbomb:
   enabled: true
-  min_timer_triggers_per_attack: 3
-  max_timer_triggers_per_attack: 12
+  min_timer_triggers_per_attack: 1
+  max_timer_triggers_per_attack: 1
 dripstone:
   enabled: true
 drowned:
@@ -96,8 +96,8 @@ eggarrow:
 eggdrop:
   enabled: true
   probability: 1.0
-  min_eggs: 1
-  max_eggs: 4
+  min_eggs: 16
+  max_eggs: 16
 eggs:
   enabled: true
 eggshells:
@@ -105,12 +105,12 @@ eggshells:
 encumbrance:
   enabled: true
   penalties:
-    occupied_inventory_slot: 0.0003
-    leather_armor: 0.001
-    non_leather_armor: 0.0025
-    slowness: 0.10
-    confusion: 0.05
-    gods_rage: 0.01
+    occupied_inventory_slot: 0.001
+    leather_armor: 0.05
+    non_leather_armor: 0.05
+    slowness: 1.00
+    confusion: 1.00
+    gods_rage: 1.00
 endcrystal:
   enabled: true
 enddirt:
@@ -125,10 +125,10 @@ endspeed:
   enabled: true
 escalation:
   enabled: true
-  effect_count: 4
+  effect_count: 1
 expirationdate:
   enabled: true
-  probability: 0.1
+  probability: 1.0
   slime_size: 2
 explosivearrow:
   enabled: true
@@ -149,41 +149,41 @@ ghastlava:
   enabled: true
 ghasts:
   enabled: true
-  probability: 0.2
+  probability: 0.25
 glass:
   enabled: true
 goddesshoe:
   enabled: true
 grassspread:
   enabled: true
-  probability: 0.5
+  probability: 0.9
 gravestone:
   enabled: true
 grievingwidow:
   enabled: true
-  minutes_to_disable: 10
+  minutes_to_disable: 5
 johnny:
   enabled: true
-  probability: 0.1
+  probability: 0.9
 killerrabbit:
   enabled: true
 lavalaunch:
   enabled: true
-  velocity_y: 1.3
+  velocity_y: 10.0
 learning:
   enabled: true
 levitation:
   enabled: true
-  levitation_seconds: 5
+  levitation_seconds: 600
 llamahunter:
   enabled: true
-  speed_multiplier: 5.5
-  min_llamas: 2
+  speed_multiplier: 20.0
+  min_llamas: 5
 melompkin:
   enabled: true
 mimics:
   enabled: true
-  probability: 0.05
+  probability: 0.1
 minecrafttrivia:
   enabled: true
   minutes_between_questions: 10
@@ -192,36 +192,36 @@ moss:
   enabled: true
 mossrevenge:
   enabled: true
-  probability: 0.2
+  probability: 1.0
   slime_size: 2
 namedzombie:
   enabled: true
   probability: 0.2
 netherrack:
   enabled: true
-  radius: 5
+  radius: 10
 nodrops:
   enabled: true
 nylium:
   enabled: true
 oldage:
   enabled: true
-  age_limit: 100 # NOTE: Read this in LearningFromFailureListener as well
+  age_limit: 2
 overgrowth:
   enabled: true
-  delay_seconds: 600
-  obsidian: false
+  delay_seconds: 10
+  obsidian: true
 parrotcookie:
   enabled: true
-  parrot_duplicate_count: 5
+  parrot_duplicate_count: 20
 parrotdeath:
   enabled: true
 parrots:
   enabled: true
 phantoms:
   enabled: true
-  spawn_probability: 0.33
-  cooldown_after_kill_seconds: 600
+  spawn_probability: 1.0
+  cooldown_after_kill_seconds: 5
   min_spawn_height: 6
   max_spawn_height: 20
 piglins:
@@ -230,18 +230,18 @@ pigs:
   enabled: true
 pillagerdeath:
   enabled: true
-  slime_count: 3
+  slime_count: 6
   slime_size: 2
 pokeball:
   enabled: true
 platefire:
   enabled: true
-  probability: 0.05
+  probability: 1.0
 pufferfish:
   enabled: true
-  pufferfish_count: 5
-  explosion_power: 5.0
-  explosion_power_in_water: 10.0
+  pufferfish_count: 10
+  explosion_power: 20.0
+  explosion_power_in_water: 40.0
 pumpkins:
   enabled: true
 rainwater:
@@ -251,43 +251,43 @@ ravagers:
   probability: 0.5
 redstoneworld:
   enabled: true
-  drop_probability: 0.5
-  min_items: 1
+  drop_probability: 1.0
+  min_items: 64
   max_items: 64
-  min_damage: 0.0
-  max_damage: 20.0
+  min_damage: 30.0
+  max_damage: 60.0
 sandattack:
   enabled: true
-  red_sand_probability: 0.1
+  red_sand_probability: 0.5
   max_drop_height: 15
 sheepcolor:
   enabled: true
 shieldsurf:
   enabled: true
-  damage_multiplier: 1.0
+  damage_multiplier: 2.0
 shufflelogs:
   enabled: true
 silverfish:
   enabled: true
-  probability: 0.2
-  bomb_probability: 0.2
-  bomb_radius: 3
-  release_chance: 0.2
-  infestation_chance: 0.2 # NOTE: Stack on release_chance in the code
+  probability: 1.0
+  bomb_probability: 1.0
+  bomb_radius: 6
+  release_chance: 0.5
+  infestation_chance: 0.5
 silverfishburn:
   enabled: true
 slimesplit:
   enabled: true
-  max_slime_size: 10 # NOTE: Put a cap on this in the code
+  max_slime_size: 15
 slowslab:
   enabled: true
-  slow_time_seconds: 10
-  slowness_level: 4
+  slow_time_seconds: 999
+  slowness_level: 5
 snowspeed:
   enabled: true
 snowball:
   enabled: true
-  speed_multiplier: 5.5
+  speed_multiplier: 20.0
 solidswap:
   enabled: true
 spillage:
@@ -296,13 +296,13 @@ stonetools:
   enabled: true
 stronghold:
   enabled: true
-  bomb_probability: 0.2
-  bomb_radius: 4
+  bomb_probability: 1.0
+  bomb_radius: 6
   release_chance: 0.5
   infestation_chance: 0.5
 sweetdreams:
   enabled: true
-  effects_count: 3
+  effects_count: 4
 tallgrass:
   enabled: true
   boots_damage_probability: 1.0
@@ -312,7 +312,7 @@ torches:
   enabled: true
 trader:
   enabled: true
-  chaos_trader_probability: 0.05
+  chaos_trader_probability: 0.5
 unfinished:
   enabled: true
 villagerdeath:
@@ -322,18 +322,18 @@ wardensummon:
   enabled: true
 weepingangel:
   enabled: true
-  spawn_probability: 0.05
-  max_angels_per_chunk: 2
-  movement_speed: 1.0 # Meters per tick
+  spawn_probability: 0.1
+  max_angels_per_chunk: 6
+  movement_speed: 3.0
 witchattack:
   enabled: true
   probability: 0.5
 witches:
   enabled: true
-  probability: 0.05
+  probability: 1.0
 witherarrow:
   enabled: true
-  wither_seconds: 10
+  wither_seconds: 999
 witherbow:
   enabled: true
   probability: 0.5
@@ -348,6 +348,6 @@ zombiedrowning:
   enabled: true
 zombiespeed:
   enabled: true
-  speed: 0.2738638
+  speed: 4.0
 zombietrade:
   enabled: true
