--- a/config-easy.yml
+++ b/config-easy.yml
@@ -134,6 +134,9 @@ explosivearrow:
   enabled: true
 fall:
   enabled: true
+fishhook:
+  enabled: true
+  speed: 10.0
 fishsanctuary:
   enabled: true
 forestfire:
