--- a/config-hard.yml
+++ b/config-hard.yml
@@ -134,6 +134,9 @@ explosivearrow:
   enabled: true
 fall:
   enabled: true
+fishhook:
+  enabled: true
+  speed: 20.0
 fishsanctuary:
   enabled: true
 forestfire:
