--- a/config-normal.yml
+++ b/config-normal.yml
@@ -134,6 +134,9 @@ explosivearrow:
   enabled: true
 fall:
   enabled: true
+fishhook:
+  enabled: true
+  speed: 15.0
 fishsanctuary:
   enabled: true
 forestfire:
