--- a/config-hard.yml
+++ b/config-hard.yml
@@ -31,6 +31,10 @@ blazepower:
   enabled: true
 boatbomb:
   enabled: true
+bouncyprojectile:
+  enabled: true
+  split_count: 3
+  split_iterations: 2
 bucketroulette:
   enabled: true
 butterfingers:
